# pySciWS_backup

./: .gitignore  .pre-commit-config.yaml  README.md  environment.yml  pyproject.toml
config/: matplotlib_config.py
scripts/: 1-CPA-laser.py  2-CPA-laser-simp.py
scripts/CPA/: 1-CPA-laser.py
scripts/EP & BIC/: 1-EP-BIC-Hamiltonian.py
scripts/Topo & BIC/: 1-TBIC-band-structure.py
scripts/gainEP/: test_10in16out_function.py  test_gain_ep_functions.py
scripts/matrix_test/: 1-matrix-eigensystem.py
scripts/管槽增益特性探究/: 传递函数分析.py
src/: matrix.py  my_dtypes.py  my_plots.py  numerical.py  space_curve.py
src/gain_ep/: gain_ep_sim.py
